fix: standardize figcaption spacing

--- a/src/css/components/article-image.css
+++ b/src/css/components/article-image.css
@@ -1,7 +1,3 @@
 .cmp-article-image {
 	margin-inline: auto;
-
-	& + figcaption {
-		margin-block-start: 0.5rem;
-	}
 }
